--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/
-    username:
+    url: jdbc:mysql://localhost:3306
+    username: root
     password:
   jpa:
     hibernate:
